syntax= "proto3";
package ecommerceapp.users;


service User{
    rpc create(CreateUserCommand) returns (CreateUserResult) {}
}
enum Gender {
    MALE = 0;
    FEMALE = 1;
    OTHER = 2;
}
enum Role {
    CUSTOMER = 0;
    SHIPPER = 1;
    SHOP_OWNER = 2;
}
message CreateUserCommand {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string phoneNumber = 4;
    string username = 5;
    string password = 6;
    string dateOfBirth = 7;  // Represent as a string (ISO 8601 format)
    Gender gender = 8;
    string addressLine1 = 9;
    optional string addressLine2 = 10;  // Optional field
    string city = 11;
    string nation = 12;
    Role role = 13;
    oneof detail {
      CustomerDetail customerDetail = 14;
      ShipperDetail shipperDetail = 15;
      ShopOwnerDetail shopOwnerDetail = 16;
    }
}
message CustomerDetail {
    string preferredLanguage = 1;
    string loyaltyStatus = 2;
    // Add other customer-specific fields here
}
  
  message ShipperDetail {
    string companyName = 1;
    string deliveryServiceType = 2;
    // Add other shipper-specific fields here
  }
  
message ShopOwnerDetail {
    string shopName = 1;
    string shopCategory = 2;
    // Add other shop owner-specific fields here
 }
 message CreateUserResult {
    string id = 1;  // ID of the newly created user
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string phoneNumber = 5;
    string username = 6;
    string dateOfBirth = 7;  // Represent as a string (ISO 8601 format)
    Gender gender = 8;
    string addressLine1 = 9;
    string addressLine2 = 10;  // Optional field
    string city = 11;
    string nation = 12;
    Role role = 13;
    oneof detail {
        CustomerDetail customerDetail = 14;
        ShipperDetail shipperDetail = 15;
        ShopOwnerDetail shopOwnerDetail = 16;
    }
}